@@ -1,3 +1,5 @@
+* Ignore consumable products when inactivating locations
+
 Version 6.4.0 - 2022-05-02
 * Bug fixes (see mercurial logs for details)
 * Add location or warehouse in shipment tree view
